@@ -283,9 +283,9 @@ protected:
 public:
   typedef _Key key_type;
   typedef _Value value_type;
-  typedef value_type* pointer;
+  typedef typename _Traits::pointer pointer;
   typedef const value_type* const_pointer;
-  typedef value_type& reference;
+  typedef typename _Traits::reference reference;
   typedef const value_type& const_reference;
   typedef size_t size_type;
   typedef ptrdiff_t difference_type;
