@@ -21,6 +21,7 @@ class SetTest : public CPPUNIT_NS::TestCase
   CPPUNIT_TEST(bounds);
   CPPUNIT_TEST(specialized_less);
   CPPUNIT_TEST(implementation_check);
+  CPPUNIT_TEST(reverse_iterator_test);
   CPPUNIT_TEST_SUITE_END();
 
   protected:
@@ -32,6 +33,7 @@ class SetTest : public CPPUNIT_NS::TestCase
     void bounds();
     void specialized_less();
     void implementation_check();
+    void reverse_iterator_test();
 };
 
 CPPUNIT_TEST_SUITE_REGISTRATION(SetTest);
@@ -219,8 +221,35 @@ void SetTest::implementation_check()
   set<int> tree;
   tree.insert(1);
   set<int>::iterator it = tree.begin();
-  ++it;
+  int const& int_ref = *it++;
+  CPPUNIT_ASSERT( int_ref == 1 );
 
   CPPUNIT_ASSERT( it == tree.end() );
   CPPUNIT_ASSERT( it != tree.begin() );
+
+  set<int>::const_iterator cit = tree.begin();
+  int const& int_cref = *cit++;
+  CPPUNIT_ASSERT( int_cref == 1 );
+}
+
+void SetTest::reverse_iterator_test()
+{
+  set<int> tree;
+  tree.insert(1);
+  tree.insert(2);
+
+  {
+    set<int>::reverse_iterator rit(tree.rbegin());
+    CPPUNIT_ASSERT( *(rit++) == 2 );
+    CPPUNIT_ASSERT( *(rit++) == 1 );
+    CPPUNIT_ASSERT( rit == tree.rend() );
+  }
+
+  {
+    set<int> const& ctree = tree;
+    set<int>::const_reverse_iterator rit(ctree.rbegin());
+    CPPUNIT_ASSERT( *(rit++) == 2 );
+    CPPUNIT_ASSERT( *(rit++) == 1 );
+    CPPUNIT_ASSERT( rit == ctree.rend() );
+  }
 }
